# Melodizer

./: Bar.cpp  Bar.h  CppProperties.json  Event.cpp  Event.h  Makefile  MelodizerLNS  MelodizerLNS.cpp  MelodizerLNS.h  OpenMusicTool.h  OpenMusicTool_V1.cpp  README.md  openMusicTool  openMusicTool.cpp  send-more-money.cpp  solution-editor.lisp
FuxCP/: FuxCP.lisp
FuxCP/reference-pages/: cp-params.html  fux-cp.html  ind-alpha.html  index.html  search-next-fux-cp.html
FuxCP/sources/: 3sp-ctp.lisp  constraints.lisp  fux-counterpoint.lisp  fuxcp-main.lisp  interface.lisp  melodizer-utils.lisp  utils.lisp
Melodizer/: Melodizer.lisp
Melodizer/reference-pages/: ind-alpha.html  index.html  melody-finder.html
Melodizer/sources/: dummy-problem.lisp  melodizer-csp.lisp  melodizer-csts.lisp  melodizer-utils.lisp  melodizer.lisp  melody-finder.lisp  my-object.lisp  rhythm-csp.lisp  rhythm-csts.lisp  rhythm-utils.lisp
Melodizer2.0/reference-pages/: index.html  (+1 more)
Melodizer_v2.0/: README.md
Versions of FuxCP/FuxCP-3Voices/FuxCP/: CMakeLists.txt
Versions of FuxCP/FuxCP-3Voices/FuxCP/reference-pages/: cp-params.html
Versions of FuxCP/FuxCP-3Voices/FuxCP/sources/: 1sp-ctp.lisp  2sp-ctp.lisp  README.md  old-interface.lisp
Versions_of_FuxCP/FuxCP-3Voices/GiL_Library/: CMakeLists.txt
Versions_of_FuxCP/FuxCP-3Voices/GiL_Library/c++/: gecode_wrapper.cpp  script.sh  space_wrapper.cpp
Versions_of_FuxCP/FuxCP-3Voices/GiL_Library/c++/headers/: space_wrapper.hpp
Versions_of_FuxCP/FuxCP-3Voices/GiL_Library/reference-pages/: ind-alpha.html
Versions_of_FuxCP/FuxCP-4Voices/FuxCP/c++/: CMakeLists.txt  FuxTestInstructions.txt  Main  Makefile  gecode.framework  log.txt  main.cpp  valgrind-out.txt
Versions_of_FuxCP/FuxCP-4Voices/FuxCP/c++/headers/: CounterpointUtils.hpp  Stratum.hpp  Utilities.hpp  Voice.hpp  constraints.hpp  fuxTest.hpp  problem_wrapper.hpp
Versions_of_FuxCP/FuxCP-4Voices/FuxCP/c++/headers/CounterpointProblems/: CounterpointProblem.hpp  FourVoiceCounterpoint.hpp  ThreeVoiceCounterpoint.hpp  TwoVoiceCounterpoint.hpp
Versions_of_FuxCP/FuxCP-4Voices/FuxCP/c++/headers/Parts/: CantusFirmus.hpp  FifthSpeciesCounterpoint.hpp  FirstSpeciesCounterpoint.hpp  FourthSpeciesCounterpoint.hpp  Part.hpp  SecondSpeciesCounterpoint.hpp  ThirdSpeciesCounterpoint.hpp
Versions_of_FuxCP/FuxCP-4Voices/FuxCP/c++/src/: CounterpointUtils.cpp  Stratum.cpp  Utilities.cpp  Voice.cpp  constraints.cpp  fuxTest.cpp  problem_wrapper.cpp
Versions_of_FuxCP/FuxCP-4Voices/FuxCP/c++/src/CounterpointProblems/: CounterpointProblem.cpp  FourVoiceCounterpoint.cpp  ThreeVoiceCounterpoint.cpp  TwoVoiceCounterpoint.cpp
Versions_of_FuxCP/FuxCP-4Voices/FuxCP/c++/src/Parts/: CantusFirmus.cpp  FifthSpeciesCounterpoint.cpp  FirstSpeciesCounterpoint.cpp  FourthSpeciesCounterpoint.cpp  Part.cpp  SecondSpeciesCounterpoint.cpp  ThirdSpeciesCounterpoint.cpp
(+83 files in other folders)
